# NVIDIA-Nemotron

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
nvidia_nemotron.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
scripts/: split_train_by_pattern.py
scripts/basic/: common.py  const.py  types.py
scripts/cot_prompt/: README.md  bit_manipulation.py  check_cot.py  cipher.py  cryptarithm.py  dictionary.txt  equation_numeric.py  gen_prompt.py  gravity.py  numeral.py  numerical.py  store_types.py  unit_conversion.py  wonderland.txt
scripts/extraction/: README.md  generate_pattern_rule_reports.py  split_train_by_pattern.py
scripts/extraction/extract_pattern/: __init__.py  base.py  bit_prompt.py  equation_prompt.py  gravity_prompt.py  roman_prompt.py  text_prompt.py  unit_prompt.py
scripts/extraction/patterns/: README.md  __init__.py  base.py
scripts/extraction/patterns/bit_manipulation/: README.md  report.py  validator.py
scripts/extraction/patterns/cipher/: report.py  validator.py
scripts/extraction/patterns/cryptarithm/: __init__.py  report.py  validator.py
scripts/extraction/patterns/equation_transformation/: README.md  report.py  validator.py
scripts/extraction/patterns/gravity/: README.md  __init__.py  report.py  validator.py
scripts/extraction/patterns/gravity_distance/: report.py  validator.py
scripts/extraction/patterns/numeral/: report.py  validator.py
scripts/extraction/patterns/numeric_equation/: README.md  constants.py  label.py  (+5 more)
scripts/gen_data/: README.md  gen_corpus.py  gen_problems.py  gen_raw_data.py  gen_reasoning.py  gen_result.py
scripts/gen_data/types/: __init__.py  base.py  bit_manipulation.py  cipher.py  equation.py  gravity.py  numeral.py  unit_conversion.py
scripts/infer/: README.md  __init__.py  evaluator.py  infer.py  notebook_tinker (1).py
scripts/infer/vllm/: README.md  __init__.py  infer.py
scripts/server/: train_dashboard.py
scripts/submit/: README.md  upload_adapter_to_kaggle.py
scripts/train/: base.py  config.py  loss_config.py  lr_schedule.py  sft.py  utils.py
scripts/trainer/: client.py
(+12 files in other folders)
