[project]
name = "nvidia-nemotron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "modal>=1.4.2",
    "tinker>=0.18.2",
]

[project.scripts]
split-train-by-pattern = "scripts.extraction.split_train_by_pattern:main"
generate-pattern-rule-reports = "scripts.extraction.generate_pattern_rule_reports:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scripts*"]
